--- a/package.yaml
+++ b/package.yaml
@@ -23,6 +23,7 @@ dependencies:
 - base >= 4.7 && < 5
 - text
 - optparse-applicative
+- rio
 
 ghc-options:
 - -Wall
@@ -34,6 +35,7 @@ ghc-options:
 - -Wmissing-home-modules
 - -Wpartial-fields
 - -Wredundant-constraints
+- -XNoImplicitPrelude
 
 library:
   source-dirs: src
